--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-dom": "^17.0.10",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
